login and register working

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,4 +1,49 @@
 extends ../shared/template
 
 block content
-  h1= title
+
+  if(!user)
+    .container#signin
+      form.form-signin.col-md-5
+        h2.form-signin-heading Sign In
+        input#email.form-control(type='email', autofocus=true, placeholder='Email Address')
+        input#pw.form-control(type='password', placeholder='Password')
+        button.btn.btn-primary.btn-block#login Login
+      .col-md-2
+      form.form-signin.col-md-5
+        h2.form-signin-heading New Account
+        input#newEmail.form-control(type='email', autofocus=true, placeholder='Email Address')
+        input#newPw.form-control(type='password', placeholder='Password')
+        button.btn.btn-primary.btn-block#register Register
+
+  if(user)
+    h2 Welcome to your Dashboard, #{user.email}
+
+    h3 New Task
+    form
+      input#title(type=text, autofocus=true, placeholder="Title")
+      input#date(type=date)
+      input#color(type=color)
+      button#add Add Task
+
+    .table-responsive
+      table.table.table-striped
+        thead
+          tr
+            th Complete
+            th Title
+            th Due Date
+            th
+            th
+        tbody
+          if(tasks)
+            each task in tasks
+              tr
+                td
+                  input.complete(type=checkbox)
+                td.title task.title
+                td.date task.date
+                td
+                  button.edit Edit
+                td
+                  button.delete.glyphicon.glyphicon-trash
